; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_vo_vdpau.c_draw_osd_cb.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_vo_vdpau.c_draw_osd_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sub_bitmaps = type { i32 }
%struct.vo = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.sub_bitmaps*)* @draw_osd_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @draw_osd_cb(i8* %0, %struct.sub_bitmaps* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.sub_bitmaps*, align 8
  %5 = alloca %struct.vo*, align 8
  store i8* %0, i8** %3, align 8
  store %struct.sub_bitmaps* %1, %struct.sub_bitmaps** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.vo*
  store %struct.vo* %7, %struct.vo** %5, align 8
  %8 = load %struct.vo*, %struct.vo** %5, align 8
  %9 = load %struct.sub_bitmaps*, %struct.sub_bitmaps** %4, align 8
  %10 = call i32 @generate_osd_part(%struct.vo* %8, %struct.sub_bitmaps* %9)
  %11 = load %struct.vo*, %struct.vo** %5, align 8
  %12 = load %struct.sub_bitmaps*, %struct.sub_bitmaps** %4, align 8
  %13 = getelementptr inbounds %struct.sub_bitmaps, %struct.sub_bitmaps* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @draw_osd_part(%struct.vo* %11, i32 %14)
  ret void
}

declare dso_local i32 @generate_osd_part(%struct.vo*, %struct.sub_bitmaps*) #1

declare dso_local i32 @draw_osd_part(%struct.vo*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
